-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
-
214f7f890 (dev), e9dd208e1 (6.6), f2575915a (6.5), b9716659f (tqtc/lts-6.2)
It does not seem to be watching primaryScreenChanged signal
| For Gerrit Dashboard: QTBUG-114687 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 486173,2 | Fix primary screen change | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 489322,2 | Fix primary screen change | 6.5 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 489323,2 | Fix primary screen change | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 489330,1 | Fix primary screen change | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |
| 489331,2 | Fix primary screen change | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |