Fix primary screen change

Fixes: QTBUG-114687
Change-Id: I9046ebf9ebcb847c4b0512057c54c976a717fb91
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit 214f7f89042ca12b8ff1b50f19ce3a994b8b13ab)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>